--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==3.0.2
-numpy==1.26.4
-pandas==2.2.2
-scikit-learn==1.4.2
-joblib==1.3.2
-pillow==10.3.0
-gunicorn
+Flask==2.2.3
+gunicorn==20.1.0
+numpy==1.23.5
+pandas==1.5.3
+scikit-learn==1.2.2
+joblib==1.2.0
+gunicorn==20.1.0
+
